potside.css
h1,h2{
  font-family: 'Baloo 2', cursive;
  color: #3B2A21;
}
body {
  font-family: 'Poppins', sans-serif;
  background-color: #F8F5F0;
  color: #444444;
  margin: 0px;
  padding: 0px;
}
.button{
  background-color: #9C6B3E;
}
.discri{
  color: #8A9A5B;
}
.item{
  background-color: burlywood;
  width: 250px;
  height: 100px;
  margin-top: 5px;
  margin-bottom: 5px;
  margin-left: 5px;
  margin-right: 5px;
  display: flex;
  align-items: center;
  text-align: center;
  justify-content: center;
  flex-direction: column;
  background-color: lightsalmon;
  font-weight: bold;
  border-radius: 8px;
  margin-top: 20px;
}
.item:hover{
  color: peru;
  transition: 0.3s ease;
  text-shadow: 
  0 0 5px #fff,
  0 0 10px #0ff,
  0 0 20px #0ff,
  0 0 40px #0ff;
  transform: translateY(-10px);
  box-shadow: 0 0 30px rgba(0, 255, 255, 0.5);
}
.itemcont{
  display: grid;
  align-items: center;
  justify-content: center;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  gap: 5px;
}
.box{
  align-content: center;
  font-weight: bold;
  text-align: center;
  justify-content: center;
  cursor: grab;
}
.box:active{
  cursor: grabbing;
}
.button{
  cursor: pointer;
  margin-top: 5px;
  height: 25px;
  width: 80px;
}
.nav{
  margin: 0px;
  border: 0px;
  padding: 0px;
  background-color:burlywood;
  height: 50px;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 40px;
}
.nav h1{
  width: 100px;
  text-align: center;
  margin: 0px;
}
.navitem{
  font-weight: bold;
  margin: 0px;
  border: 0px;
  padding: 0px;
  width: 20px;
}
.navitem:hover{
  background-color: #8A9A5B;
  width: 150px;
  color: #8A9A5B;
  cursor: pointer;
  border-radius: 10px;
  transition: 0.3s ease;
  text-shadow: 
  0 0 5px #fff,
  0 0 10px #0ff,
  0 0 20px #0ff,
  0 0 40px #0ff;
}
.button:hover{
  background-color: coral;
  transition: 0.5s;
}
#contact {
  padding: 4px 2px 6px;
  min-height: auto;
  text-align: center;
}
#contact h2 {
  font-size: 40px;
  margin-bottom: 1px;
}
#contact p {
  margin-bottom: 2px;
  color: peru;
}
.social{
  background-color: dimgray;
  border-radius: 8px;
  color: coral;
}
.socbut{
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

